--- a/Example/SwiftCronExample.xcodeproj/xcshareddata/xcschemes/SwiftCronTests.xcscheme
+++ b/Example/SwiftCronExample.xcodeproj/xcshareddata/xcschemes/SwiftCronTests.xcscheme
@@ -7,8 +7,11 @@
       buildImplicitDependencies = "YES">
       <BuildActionEntries>
          <BuildActionEntry
+            buildForTesting = "YES"
             buildForRunning = "YES"
-            buildForTesting = "YES">
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "8679D2841CE1F4740071D783"
@@ -37,6 +40,15 @@
             </BuildableReference>
          </TestableReference>
       </Testables>
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8679D2841CE1F4740071D783"
+            BuildableName = "SwiftCronExampleTests.xctest"
+            BlueprintName = "SwiftCronExampleTests"
+            ReferencedContainer = "container:SwiftCronExample.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </TestAction>
@@ -50,6 +62,15 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8679D2841CE1F4740071D783"
+            BuildableName = "SwiftCronExampleTests.xctest"
+            BlueprintName = "SwiftCronExampleTests"
+            ReferencedContainer = "container:SwiftCronExample.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
@@ -59,6 +80,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "8679D2841CE1F4740071D783"
+            BuildableName = "SwiftCronExampleTests.xctest"
+            BlueprintName = "SwiftCronExampleTests"
+            ReferencedContainer = "container:SwiftCronExample.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
